# access_control_system

pico/hello_pico/: CMakeLists.txt  main.c  ws2812.c  ws2812.h
pico/hello_pico/drivers/buzzer/: buzzer.c  buzzer.h
pico/hello_pico/drivers/pir/: pir.c  pir.h  pir_hw.h
pico/hello_pico/drivers/sg90/: sg90.c  sg90.h
pico/hello_pico/drivers/ws2812/: ws2812.c  ws2812.h  ws2812.pio
pico/hello_pico/uart/: uart.c  uart.h
rpi4/: test_camera  test_camera.c
rpi4/ai/face_lbph/: .face_auth.py.swp  face_auth.py  train.py
rpi4/ai/face_lbph/model/: lbph_model.yml
rpi4/app/daemon/: controller  controller.c
rpi4/app/daemon/camera/: camera.c  camera.h
rpi4/app/daemon/uart/: uart.c  uart.h  uart_app
rpi4/app/test/: pir_test  pir_test.c
rpi4/app/web/: app.py
rpi4/app/web/static/css/: style.css
rpi4/app/web/static/js/: main.js
rpi4/app/web/templates/: index.html
rpi4/daemon/uart/: Makefile  main.c  uart_app
rpi4/drivers/pir/: ..module-common.o.cmd  .Module.symvers.cmd  .modules.order.cmd  .pir_driver.ko.cmd  .pir_driver.mod.cmd  .pir_driver.mod.o.cmd  .pir_driver.o.cmd  Makefile  pir_driver.c  pir_driver.ko  pir_driver.mod  pir_driver.mod.c
rpi4/dt/: pir-overlay.dts  pir.dtbo
